// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Cards Big card 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card-bg card-big card"
            space={true}
          >
            <div
              className="card-body"
            >
              <div
                className="top-icon"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-card"
                  />
                </svg>
              </div>
              <h5
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              <a
                className="read-more"
              >
                <span
                  className="text"
                >
                  Leggi di più
                </span>
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-arrow-right"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Big card with tag 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card-bg card-big border-bottom-card card"
            space={true}
          >
            <div
              className="flag-icon"
            />
            <div
              className="etichetta"
            >
              <svg
                className="icon"
              >
                <use
                  xlinkHref="sprite.svg#it-settings"
                />
              </svg>
              <span>
                Sviluppo
              </span>
            </div>
            <div
              className="card-body"
            >
              <div
                className="top-icon"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-card"
                  />
                </svg>
              </div>
              <h5
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              <a
                className="read-more"
              >
                <span
                  className="text"
                >
                  Leggi di più
                </span>
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-arrow-right"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Card with icon 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <div
                className="categoryicon-top"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-file"
                  />
                </svg>
                <span
                  className="text"
                >
                  <span
                    className="text"
                  >
                    Category
                    <br />
                    Name
                  </span>
                </span>
              </div>
              <a
                href="#"
              >
                <h5
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </h5>
              </a>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Card with image 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card-bg card-img no-after card"
          >
            <div
              className="img-responsive-wrapper"
            >
              <div
                className="img-responsive img-responsive-panoramic"
              >
                <figure
                  className="img-wrapper"
                >
                  <img
                    alt="imagealt"
                    src="https://via.placeholder.com/310x94/0066cc/FFFFFF/?text=IMMAGINE%20DI%20ESEMPIO"
                    title="img title"
                  />
                </figure>
                <div
                  className="card-calendar d-flex flex-column justify-content-center"
                >
                  <span
                    className="card-date"
                  >
                    31
                  </span>
                  <span
                    className="card-day"
                  >
                    novembre
                  </span>
                </div>
              </div>
            </div>
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <a
                className="read-more"
              >
                <span
                  className="text"
                >
                  Leggi di più
                </span>
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-arrow-right"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Card with shading 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card-bg card"
            space={true}
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              <a
                className="read-more"
              >
                <span
                  className="text"
                >
                  Leggi di più
                </span>
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-arrow-right"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Esempi interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
            space={false}
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit…
              </h5>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              <a
                className="read-more"
                href="#"
              >
                <span
                  className="text"
                >
                  Leggi di più
                </span>
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-arrow-right"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Simple Article 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <div
                className="category-top"
              >
                <a
                  className="category"
                >
                  Category
                </a>
                <span
                  className="data"
                >
                  10/12/2018
                </span>
              </div>
              <h5
                className="big-heading card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit…
              </h5>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              <span
                className="card-signature"
              >
                di Federico De Paolis
              </span>
              <a
                className="read-more"
              >
                <span
                  className="text"
                >
                  Leggi di più
                </span>
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="sprite.svg#it-arrow-right"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Simple Card 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <div
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </div>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Simple Card in multiple columns 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <div
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </div>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-12 col-lg-4"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <div
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </div>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-12 col-lg-4"
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <div
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </div>
              <p
                className="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Cards Special cards 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6"
      >
        <div
          className="card-wrapper"
        >
          <a
            className="card-img no-after special-card card"
          >
            <div
              className="img-responsive-wrapper"
            >
              <div
                className="img-responsive"
              >
                <figure
                  className="img-wrapper"
                >
                  <img
                    alt="imagealt"
                    src="https://via.placeholder.com/174x214/F9F9FE/0066CC/?text=IMMAGINE%20DI%20ESEMPIO"
                    title="img title"
                  />
                </figure>
                <div
                  className="card-calendar d-flex flex-column justify-content-center"
                >
                  <span
                    className="card-date"
                  >
                    31
                  </span>
                  <span
                    className="card-day"
                  >
                    novembre
                  </span>
                </div>
              </div>
            </div>
            <div
              className="card-body"
            >
              <div
                className="head-tags"
              >
                <span
                  className="data"
                >
                  10/10/2018
                </span>
              </div>
              <h5
                className="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
